# dissertation-clean

./: .gitignore  README.md  pyproject.toml
config/: model_registry.2026-05-02.yaml  model_registry.2026-05-03.yaml  model_registry.candidate.yaml
config/harnesses/: budgeted_escalation.yaml  (+13 more)
docs/: adjudication_protocol.md  architecture.md  coding_agent_harness_literature_review.md  evaluation_contract.md  experiment_protocol.md  implementation_plan.md  letter_explorer_app_plan.md  literature_review.md  model_registry_protocol.md  porting_notes.md  proposal_decision_map.md  research_question.md  run_plan_2026-05-03_n25.md
mappings/: exect_lite_mapping_v1.yaml  exect_v2_mapping_v1.yaml
memory/: MEMORY.md  project_dissertation.md
scripts/: auto_adjudicate.py  build_cockpit_data.py  build_letter_explorer_data.py  check.py  run_experiment.py  run_model_matrix.py  summarize_adjudication.py  summarize_results.py
site/: cockpit-data.json  index.html  letter-explorer-9278.json  letter-explorer-data.json
tests/: test_adjudication.py  test_anchor_harnesses.py  test_assets.py  test_baseline_harnesses.py  test_data.py  test_direct_evidence_contract.py  test_document_interface.py  test_escalation_harnesses.py  test_external_harness_adapter.py  test_full_contract_single.py  test_harness_events.py  test_harness_manifests.py  test_harnesses.py  test_labels.py  test_metrics.py  test_model_matrix.py  test_model_registry.py  test_modules.py  test_providers.py  test_retrieval.py  test_retrieval_field_extractors.py  test_schemas.py  test_scripts.py  test_tables.py
(+195 files in other folders)
